# robot-navigation

./: .Dockerfile.un~  .app_qr_code.py.un~  .mosquitto.conf.un~  .run_all.sh.un~  Dockerfile  Dockerfile~  README.md  app_qr_code.py  app_qr_code.py~  motor_control  motor_control.cpp  pyproject.toml  requirements.txt  run_all.sh  web_server.py
.github/workflows/: docker.yml
env/: pyvenv.cfg
